<resources>
    <string name="app_name" translatable="false">My Application</string>
        <string name="tip_time">Tip Time</string>
        <string name="cost_of_service_hint">Cost of service hint</string>
        <string name="how_was_the_service">How was the service?</string>
        <string name="round_up_tip">Round up tip?</string>
        <string name="calculate">Calculate</string>
        <string name="tip_amount">Tip Amount</string>
        <string name="amazing">Amazing (20%)</string>
        <string name="good">Good (18%)</string>
</resources>